<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/displayScreen"
        android:layout_width="364dp"
        android:layout_height="65dp"
        android:layout_marginTop="260dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="end"
        android:textAlignment="gravity"
        android:labelFor="@id/displayScreen"
        android:background="@null"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="380dp"
        android:layout_height="54dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayScreen">

        <Button
            android:id="@+id/btn1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/_1" />

        <Button
            android:id="@+id/btn2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/_2" />

        <Button
            android:id="@+id/btn3"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/_3" />

        <Button
            android:id="@+id/btnPlus"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/plus" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="380dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btn4"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/_4" />

        <Button
            android:id="@+id/btn5"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/_5" />

        <Button
            android:id="@+id/btn6"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/_6" />

        <Button
            android:id="@+id/btnMinus"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/dash" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="380dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="13dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/btn7"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/_7" />

        <Button
            android:id="@+id/btn8"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/_8" />

        <Button
            android:id="@+id/btn9"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/_9" />

        <Button
            android:id="@+id/btnMulti"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/multi"
            app:backgroundTint="@android:color/holo_blue_light" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="380dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="11dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/btnC"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/cl" />

        <Button
            android:id="@+id/btn0"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/_0" />

        <Button
            android:id="@+id/btnD"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/decimal" />

        <Button
            android:id="@+id/btnDivide"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/slash" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="11dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/btnEq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/eq"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>